# v2rayAll

./: .gitignore  README.md  README_en_US.md
v2rayAll/: CMakeLists.txt  CMakeLists.txt.user.30b2272  CMakeLists.txt.user.855d4d0  HomeForm.ui.qml  Page1Form.ui.qml  Page2Form.ui.qml  icon.rc  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  rectangle.qml  rectangle.qml.autosave  scripting.qml  v2rayAll.pro  v2rayAll.qrc  v2rayAll_en_US.ts  v2rayAll_zh_CN.ts
v2rayAll/cpp/learn/: colorMarker.cpp  colorMarker.h
v2rayAll/interface/: main.qml  qtquickcontrols2.conf
v2rayAll/interface/_learn/: BubbleGame.qml  Button.qml  DrawComplexPath.qml  GetProfilePicture.qml  HandleMouse.qml  Image.qml  LinkText.qml  ListViewHeaderExample.qml  Loader.qml  ParallelAnimation.qml  ParentAnimation.qml  PathAnimation.qml  PropertyAnimationOnProperty.qml  PropertyAnimationSwap.qml  Rectangle.qml  RotationAnimation.qml  SimpleMusic.qml  SimpleVideo.qml  colorMaker.js
v2rayAll/interface/learn/: Behavior.qml  ChangeScriptRect.qml  ColorPicker.qml  Connections.qml  FlatButton.qml  ImageViewer.qml  Key.qml  ListViewExample.qml  Scripting.qml  SequentialAnimation.qml  SimpleMusic.qml  TableViewExample.qml  TransitionRect.qml  UseColorPicker.qml  progressbar.qml  text.qml
v2rayAll/interface/ui/: AboutForm.qml  Page1Form.ui.qml  Page2Form.ui.qml  ParameterForm.qml  PreferenceForm.qml  ServerForm.qml
v2rayAll/logic/_learn/: ChangeColor.cpp  ChangeColor.h  ColorMarker.cpp
v2rayAll/logic/core/: v2rayCore.cpp
v2rayAll/logic/learn/: ColorMarkerMain.cpp
v2rayAll/qml/: main.qml
v2rayAll/qml/learn/: ChangeColorMain.qml  ColorAnimation.qml  (+18 more)
(+3 files in other folders)
